# puptime

./: .gitignore  .travis.yml  COLLABORATORS  Dockerfile  Dockerfile-dev  Dockerfile.beat  Dockerfile.web  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml
app/: echo.py  pyproject.toml  requirements.txt  setup.cfg
app/app/: api_urls.py  celery_app.py  celery_beat.py  gunicorn.conf.py  settings.py  urls.py  wsgi_prod.py
app/common/: analytics.py  apm.py  aws.py  enums.py  models.py  util.py
app/ops/: beat_health.sh  beat_launch.sh  migration_launch.sh  web_health.sh  web_launch.sh  worker_health.sh  worker_launch.sh
app/templates/: index.html
app/templates/uptime/: check.html  downtimes.html  site_checks.html  site_downtimes.html  sites.html
app/uptime/: admin.py  api_urls.py  api_views.py  apps.py  check.py  exceptions.py  leouptime.py  models.py  selenium.py  serializers.py  sites.html  tables.py  tasks.py  urls.py  views.py
app/uptime/migrations/: 0001_initial.py  0002_auto_20210112_2257.py  0002_auto_20220128_1551.py  0002_site_owner.py  0003_auto_20210113_1438.py  0003_check_snapshot_url.py  0004_check_status.py  0005_classifier_classifierpattern.py  0005_site_status.py  0006_auto_20201218_1730.py  0006_auto_20210113_2337.py  0007_proxy_source.py
app/uptime/proxy/: common.py  digitalocean.py  ec2.py  free.py
ecs/: build.sh
scripts/: docker_build_step2.sh  heroku_deploy.sh  remote_run.sh  reset_local_db.sh  travis_deploy_tags.sh  up-prod.sh  up.sh
server/: Dockerfile-dev  echo.py  requirements.txt
(+28 files in other folders)
