[tool.poetry]
authors = ["VoteAmerica <tech@voteamerica.com>"]
description = "Monitors the uptime of state websites"
name = "puptime"
repository = "https://github.com/vote/puptime"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2"
psycopg2 = "^2.8"
argh = "^0.26.2"
autoflake = "^1.4"
black = "19.10b0"
boto3 = "^1.21.41"
celery = {version = "^5.2", extras = ["redis"]}
kombu = "^5.0"
celery-redbeat = "^2.0.0"
django-celery-results = "^2.3.0"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
dj-database-url = "^0.5.0"
environs = "^9.5.0"
isort = "^5.10.1"
netifaces = "^0.11.0"
paramiko = "^2.10.3"
python-dotenv = "^0.20.0"
PyYAML = "^6.0"
requests = "^2.27.1"
selenium = "^4.1.3"
watchdog = "^2.1.7"
python-json-logger = "^2.0.2"
sentry-sdk = "^1.14.0"
redis = "^4.4.4"
django-redis = "^5.2.0"
mypy = "^0.942"
django-stubs = "^1.10.1"
djangorestframework-stubs = "^1.5.0"
django-tables2 = "^2.4.1"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
psycogreen = "^1.0.2"
django-db-geventpool = "^4.0.0"
ddtrace = "^1.0.0"
datadog = "^0.44.0"
jedi = "^0.18.1"
ipython = "^7.16"
django-alive = "^1.2.1"
whitenoise = "^6.0.0"
uritemplate = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest-django = "^3.8.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
